@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.4
 
 	- Documentation updates (STR #2560, STR #2563)
+	- The scheduler would crash on shutdown if it was unable
+	  to create a Kerberos context.
 	- Multiple AuthTypes in cupsd.conf did not work (STR
 	  #2545)
 	- The snmp.conf file referenced the wrong man page (STR
